# ax-pipeline

./: .gitignore  CMakeLists.txt
docs/: modelzoo.md
examples/common/: common_joint.c  common_pipeline.h
examples/common/common_pipeline/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp
examples/libaxdl/include/: ax_common_api.h  ax_joint_runner.hpp  ax_model_base.hpp  ax_model_runner.hpp  c_api.h
examples/libaxdl/src/: ax_common_api.cpp  ax_joint_runner_ax620.cpp  ax_model_base.cpp  ax_model_crowdcount.cpp  ax_model_crowdcount.hpp  ax_model_det.cpp  ax_model_det.hpp  ax_model_ml_sub.cpp  ax_model_ml_sub.hpp  ax_model_multi_level_model.cpp  ax_model_multi_level_model.hpp  ax_model_runner_ax620.cpp  ax_model_seg.cpp  ax_model_seg.hpp  c_api.cpp
examples/sample_h264_ivps_joint_vo/: sample_h264_ivps_joint_vo.cpp
examples/sample_multi_rtsp_ivps_joint_multi_rtsp/: sample_multi_rtsp_ivps_joint_multi_rtsp.cpp
examples/sample_rtsp_ivps_joint_rtsp/: sample_rtsp_ivps_joint_rtsp_vo.cpp
examples/sample_rtsp_ivps_joint_rtsp_vo/: sample_rtsp_ivps_joint_rtsp_vo.cpp
examples/sample_rtsp_ivps_joint_vo/: sample_rtsp_ivps_joint_vo_new.cpp
examples/sample_run_joint/: sample_run_joint.h  sample_run_joint_post_process.cpp  sample_run_joint_post_process.h  sample_run_joint_post_process_det.cpp  sample_run_joint_post_process_pose.cpp
examples/sample_run_joint/config/: hrnet_animal_pose.json
examples/sample_v4l2_ivps_joint_vo/: CMakeLists.txt  sample_v4l2_ivps_joint_vo.cpp
examples/sample_v4l2_user_ivps_joint_vo/: sample_v4l2_user_ivps_joint_vo.cpp
examples/sample_vin_ivps_joint_venc_rtsp/: CMakeLists.txt  sample_vin_ivps_joint_venc_rtsp.c  sample_vin_ivps_joint_venc_rtsp.cpp
examples/sample_vin_ivps_joint_venc_rtsp_vo/: CMakeLists.txt  sample_vin_ivps_joint_venc_rtsp_vo.c  sample_vin_ivps_joint_venc_rtsp_vo.cpp
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/: CMakeLists.txt  README.md  run.sh  sample_vin_ivps_joint_venc_rtsp_vo.h  sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2.c
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/mp4v2/inc/mp4v2/: project.h
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/mp4v2/lib/: libmp4v2.so.2.0.0
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/onvif/inc/: onvif_api.h
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/ovf_cfg/: onvif_config.xml
examples/sample_vin_ivps_joint_venc_rtsp_vo_onvif_mp4v2/pipe/: pipeline_ivps.c  pipeline_osd.c  pipeline_venc.c
examples/sample_vin_ivps_joint_vo/: CMakeLists.txt  sample_vin_ivps_joint_vo.c  sample_vin_ivps_joint_vo.cpp  sample_vin_ivps_joint_vo.h
examples/sample_vin_ivps_joint_vo/pipe/: pipeline_osd.c
examples/sample_vin_ivps_joint_vo_h265/: sample_vin_ivps_joint_vo_h265.cpp
examples/sample_vin_ivps_joint_vo_lvgl/: CMakeLists.txt  sample_vin_ivps_joint_vo_lvgl.c
examples/sample_vin_ivps_joint_vo_lvgl/lvgl/: lv_conf.h  lv_ex_conf.h
examples/sample_vin_ivps_joint_vo_lvgl/lvgl/lv_drivers/display/: fbdev.c
examples/sample_vin_ivps_joint_vo_lvgl/lvgl/src/: evdev_mouse.c  mouse_cursor_icon.c
examples/sample_vin_ivps_joint_vo_lvgl/lvgl_sample/: lvgl_sample.c  lvgl_sample.h
examples/sample_vin_ivps_joint_vo_lvgl/pipe/: pipeline_ivps.c  pipeline_osd.c  pipeline_vo.c
examples/sample_vin_joint/: CMakeLists.txt  sample_vin_joint.c
examples/utilities/: osd_utils.cpp  ringbuffer.hpp
